Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 1.2
-
None
-
None
Description
The metadata written by parquet-mr is not correct which causes impala to be unable to read some files. This has been fixed in the latest version of parquet-mr (https://github.com/Parquet/parquet-mr/commit/aca1d8b895fb6f47e1e97e1f0133148ccbe4ab17) but we should consider making a compatibility fix in Impala to be able to handle those files.