testdata/bin/create-load-data.sh
@@ -115,6 +115,10 @@ ${IMPALA_HOME}/testdata/bin/lzo_indexer.sh /test-warehouse
 
 hadoop fs -mv /bad_text_lzo_text_lzo/ /test-warehouse/
 
+# IMPALA-694: data file produced by parquet-mr version 1.2.5-cdh4.5.0
+hadoop fs -put -f ${IMPALA_HOME}/testdata/data/bad_parquet_data.parquet \
+                  /test-warehouse/bad_parquet_parquet
+
 # Remove an index file so we test an un-indexed LZO file
 hadoop fs -rm /test-warehouse/alltypes_text_lzo/year=2009/month=1/000013_0.lzo.index
 
